--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
+*{
+    font-family: 'Prata', serif;
+}
+
 html, body{
     width: 100%;
     height: 100%;
@@ -6,7 +11,7 @@ html, body{
 
 .header{
     width: 100%;
-    height: 10%;
+    height: 15%;
     background-color: rgb(62, 117, 59);
     display: flex;
     justify-content: space-between;
@@ -19,12 +24,26 @@ html, body{
 }
 
 .header_heading{
-    font-size: 25px;
+    font-size: 18px;
     color: white;
 }
 
+.sprout_photo {
+    width: 15%;
+    height: 15%;
+    padding: 1em 2em;
+    
+}
+
+.sprout_photo:hover {background: #E9E4E0;}
+
+.header_heading a{
+    color: white;
+    text-decoration: none;  
+}
+
 .header_nav{
-    width: 20%;
+    width: 100%;
     
 }
 
@@ -37,17 +56,22 @@ html, body{
     list-style: none;
     margin: 0;
     padding: 0;
-    
+   
 }
 
 .header_menu_li{
     color: white;
-    font-size: 20px;
+    font-size: 18px;
+}
+
+.header_menu_li a{
+    color: white;
+    text-decoration: none;
 }
 
 .main{
     width: 100%;
-    height: 100%;
+    height: 85%;
     box-sizing: border-box;
 }
 
@@ -77,9 +101,71 @@ html, body{
     height: 100%;
 }
 
+.list_main_menu{
+    width: 13%;
+    height: 100%;
+    
+}
+
+.header_menu_li a:hover{
+    background: #1c87c9;
+    border-radius: .3em;
+}
+
+
+.list_menu{
+    counter-reset: li; 
+    list-style: none; 
+    font: 15px "Trebuchet MS", "Lucida Sans";
+    padding: 0;
+    margin: 2em;
+    font-size: 16px;
+}
+
+.list_menu a {
+    position: relative;
+    display: block;
+    padding: .4em .4em .4em 2em;
+    margin: .5em 0;
+    background: rgb(62, 117, 59, 0.3);
+    color: #444;
+    text-decoration: none;
+    border-radius: .3em;
+    transition: .3s ease-out;
+    margin: 1.5em;
+}
+
+.list_menu a:hover {background: #E9E4E0;}
+.list_menu a:hover:before {transform: rotate(360deg);}
+.list_menu a:before {
+    content: counter(li);
+    counter-increment: li;
+    position: absolute;
+    left: -1.3em;
+    top: 50%;
+    margin-top: -1.3em;
+    background: #6aa8cf;
+    height: 2em;
+    width: 2em;
+    line-height: 2em;
+    border: .3em solid white;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 2em;
+    transition: all .3s ease-out;
+}
+
+.header_list_li a{
+    width: 100%;
+    height: 100%;
+    color: rgb(62, 117, 59);
+    text-decoration: none;
+}
+
 .bottom-left{
-    width: 45%;
-    height: 50%;
+    width: 50%;
+    height: 45%;
+    margin: 1em;
     
 }
 
@@ -91,46 +177,84 @@ html, body{
     padding: .5em 1em;
     color: white;
     background-color: rgb(62, 117, 59, 0.5);
-    font-size: 27px;
+    font-size: 18px;
     text-align: center;
+    align-content: flex-end;
+    border-radius: .3em;
 }
 
 .bottom-right{
-    width: 45%;
-    height: 50%;
+    width: 50%;
+    height: 90%;
+    margin: 1em;
     
+}
+
+.search_button{
+    width: 100%;
+    height: 50%;
+    display: block;
+    text-align: right;
+   
+}
+
+.search_button
+input{
+    padding:4px 10px;
+    border:0;
+    font-size:16px;
+}
+
+.search {
+    width: 30%;
+}
+
+.submit{
+    width: 70px;
+    background-color: #1c87c9;
+    color:#ffffff;
 }
 
 .profile_description_right{
     width: 90%;
-    height: 90%;
+    height: 45%;
     border: 1px solid rgb(62, 117, 59);
     box-sizing: inherit;
     padding: .5em 1em;
     background-color: rgb(62, 117, 59, 0.5);
-    color: white;
-    font-style: oblique;
+    color: white;    
     text-align: justify;
-    font-size: 20px;
+    font-size: 16px;
+    border-radius: .3em;
+    
 }
 
 .profile_description_right
 >span{
-    color: white;
-    font-style: oblique;
+    color: white;    
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
+    display: block;
+    font-weight: 600;
 }
 
-.kontakte{
-    width: 70%;
-    height: 90%;
+.contact_please{
+    width: 87%;
+    height: 95%;
+    display: flex;
+    justify-content: center;
+    margin: 2em; 
+}
+
+.contact{
+    width: 75%;
+    height: 100%;
     border: 1px solid rgb(62, 117, 59);
     box-sizing: inherit;
     padding: .5em 1em;
     color: white;
     background-color: rgb(62, 117, 59, 0.5);
-    font-size: 27px;
+    font-size: 18px;
     text-align: justify;
 }
 .sind_photo{
@@ -138,16 +262,133 @@ html, body{
     height: 2%;
 }
 
-.anmeldung{
-    width: 70%;
-    height: 90%;
+.registration_please{
+    width: 87%;
+    height: 96%;
+    display: flex;
+    justify-content: center;
+    margin: 1em;
+}
+
+.registration{
+    width: 40%;
+    height: 95%;
     border: 1px solid rgb(62, 117, 59);
     box-sizing: inherit;
     padding: .5em 1em;
     color: white;
     background-color: rgb(62, 117, 59, 0.5);
-    font-size: 27px;
+    font-size: 18px;
     text-align: center;
+    border-radius: .3em;
+}
+
+
+.name_surname{
+    width: 90%;
+    height: 25%;
+    margin: 2em;
+    display: flex;
+    justify-content: center
+}
+
+.name{    
+    width: 50%;
+    height: 100%;
+  
+}
+
+.surname{   
+    width: 50%;
+    height: 100%;
+   
+}
+
+.date_phone{
+    width: 90%;
+    height: 25%;
+    margin: 2em;
+    display: flex;
+    justify-content: center
+}
+
+.date{
+    width: 50%;
+    height: 100%;
+}
+
+.phone{
+    width: 50%;
+    height: 100%;
+}
+
+.email_password{
+    width: 90%;
+    height: 25%;
+    margin: 2em;
+    display: flex;
+    justify-content: center
+}
+
+.email{
+    width: 50%;
+    height: 100%;
+}
+
+.password{
+    width: 50%;
+    height: 100%;
+}
+
+.from_where{
+    width: 100%;
+    height: 25%;
+    margin: 2em;
+    font-size: 16px;
+}
+
+.from_where_header{
+    font-size: 18px;
+}
+
+.from_where_radio
+input{
+    width: 18px;
+    height: 18px;
+
+}
+
+
+.from_where_radio
+label{
+    font-size: 14px;
+    
+}
+
+.feedback{
+    width: 100%;
+    height: 25%;
+    margin: 2em;
+}
+
+.feedback
+textarea{
+    border-radius: .3em;
+    border: .3em solid rgb(62, 117, 59);
+    background-color: rgb(62, 117, 59, 0.5);
+}
+
+input{
+    border-radius: .3em;
+    border: .3em solid rgb(62, 117, 59);
+    background-color: rgb(62, 117, 59, 0.5);
+    
+}
+
+.button{
+    width: 100%;
+    height: 25%;
+    margin: 2em;
 }
 
 button{
@@ -161,21 +402,30 @@ button{
     color: white;
 }
 
-.neuigkeiten{
-    width: 80%;
-    height: 90%;
+.news{
+    width: 75%;
+    height: 85%;
     border: 2px solid rgb(62, 117, 59);
     box-sizing: inherit;
     padding: .5em 1em;
     color: white;
     background-color: rgb(62, 117, 59, 0.5);
-    font-size: 27px;
+    font-size: 18px;
     text-align: left;
+    margin: 3em;
     
 }
 
+
+.table_please{
+    width: 75%;
+    height: 25%;
+    text-align: center;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
 .table{
-    
     border: 3px solid rgb(62, 117, 59); 
     width: 70%;
     background-color: rgb(62, 117, 59, 0.5);
@@ -184,7 +434,7 @@ button{
 
 .table
 th {
-    font-size: 24px;
+    font-size: 18px;
     font-weight: normal;
     background: rgb(62, 117, 59);
     border-top: 4px solid rgb(62, 117, 59);
@@ -204,10 +454,11 @@ td {
 
 .table
 tr:hover td {
-    background: rgb(62, 100, 49);
+    background: #6aa8cf;
 }
 
 .table
 caption{
-    font-size: 28px;  
+    font-size: 20px;
+    margin: 1em;  
 }
