--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,7 @@ html, body{
     margin: 0 auto;
     padding: 1em 2em;
     box-sizing: border-box;
-    border: 1px solid rgb(62, 117, 59);
-    
+    border: 1px solid rgb(62, 117, 59);    
 }
 
 .header_heading{
@@ -35,7 +34,10 @@ html, body{
     
 }
 
-.sprout_photo:hover {background: #E9E4E0;}
+.sprout_photo:hover {
+    background: #E9E4E0;
+    border-radius: 2em;
+}
 
 .header_heading a{
     color: white;
@@ -87,7 +89,7 @@ html, body{
     width: 100%;
     height: 100%;
     display: flex;
-    background-image: url("./sprout.jpg");
+    background-image: url("picture/sprout.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
@@ -115,8 +117,7 @@ html, body{
 
 .list_menu{
     counter-reset: li; 
-    list-style: none; 
-    font: 15px "Trebuchet MS", "Lucida Sans";
+    list-style: none;     
     padding: 0;
     margin: 2em;
     font-size: 16px;
@@ -171,8 +172,7 @@ html, body{
 
 .profile_description_left{
     width: 90%;
-    height: 90%;
-    border: 1px solid rgb(62, 117, 59);
+    height: 90%;    
     box-sizing: inherit;
     padding: .5em 1em;
     color: white;
@@ -181,6 +181,7 @@ html, body{
     text-align: center;
     align-content: flex-end;
     border-radius: .3em;
+    box-shadow: 4px 5px 5px rgb(254, 255, 254, 0.7) inset;
 }
 
 .bottom-right{
@@ -217,8 +218,7 @@ input{
 
 .profile_description_right{
     width: 90%;
-    height: 45%;
-    border: 1px solid rgb(62, 117, 59);
+    height: 45%;    
     box-sizing: inherit;
     padding: .5em 1em;
     background-color: rgb(62, 117, 59, 0.5);
@@ -226,7 +226,7 @@ input{
     text-align: justify;
     font-size: 16px;
     border-radius: .3em;
-    
+    box-shadow: 4px 5px 5px rgb(254, 255, 254, 0.7) inset;
 }
 
 .profile_description_right
@@ -236,229 +236,4 @@ input{
     font-size: 18px;
     display: block;
     font-weight: 600;
-}
-
-.contact_please{
-    width: 87%;
-    height: 95%;
-    display: flex;
-    justify-content: center;
-    margin: 2em; 
-}
-
-.contact{
-    width: 75%;
-    height: 100%;
-    border: 1px solid rgb(62, 117, 59);
-    box-sizing: inherit;
-    padding: .5em 1em;
-    color: white;
-    background-color: rgb(62, 117, 59, 0.5);
-    font-size: 18px;
-    text-align: justify;
-}
-.sind_photo{
-    width: 2%;
-    height: 2%;
-}
-
-.registration_please{
-    width: 87%;
-    height: 96%;
-    display: flex;
-    justify-content: center;
-    margin: 1em;
-}
-
-.registration{
-    width: 40%;
-    height: 95%;
-    border: 1px solid rgb(62, 117, 59);
-    box-sizing: inherit;
-    padding: .5em 1em;
-    color: white;
-    background-color: rgb(62, 117, 59, 0.5);
-    font-size: 18px;
-    text-align: center;
-    border-radius: .3em;
-}
-
-
-.name_surname{
-    width: 90%;
-    height: 25%;
-    margin: 2em;
-    display: flex;
-    justify-content: center
-}
-
-.name{    
-    width: 50%;
-    height: 100%;
-  
-}
-
-.surname{   
-    width: 50%;
-    height: 100%;
-   
-}
-
-.date_phone{
-    width: 90%;
-    height: 25%;
-    margin: 2em;
-    display: flex;
-    justify-content: center
-}
-
-.date{
-    width: 50%;
-    height: 100%;
-}
-
-.phone{
-    width: 50%;
-    height: 100%;
-}
-
-.email_password{
-    width: 90%;
-    height: 25%;
-    margin: 2em;
-    display: flex;
-    justify-content: center
-}
-
-.email{
-    width: 50%;
-    height: 100%;
-}
-
-.password{
-    width: 50%;
-    height: 100%;
-}
-
-.from_where{
-    width: 100%;
-    height: 25%;
-    margin: 2em;
-    font-size: 16px;
-}
-
-.from_where_header{
-    font-size: 18px;
-}
-
-.from_where_radio
-input{
-    width: 18px;
-    height: 18px;
-
-}
-
-
-.from_where_radio
-label{
-    font-size: 14px;
-    
-}
-
-.feedback{
-    width: 100%;
-    height: 25%;
-    margin: 2em;
-}
-
-.feedback
-textarea{
-    border-radius: .3em;
-    border: .3em solid rgb(62, 117, 59);
-    background-color: rgb(62, 117, 59, 0.5);
-}
-
-input{
-    border-radius: .3em;
-    border: .3em solid rgb(62, 117, 59);
-    background-color: rgb(62, 117, 59, 0.5);
-    
-}
-
-.button{
-    width: 100%;
-    height: 25%;
-    margin: 2em;
-}
-
-button{
-    text-align: center;
-    border: none;
-    border-radius: 7px;
-    padding: 10px 30px;
-    background: rgb(62, 117, 59);
-    cursor: pointer;
-    font-weight: bold;
-    color: white;
-}
-
-.news{
-    width: 75%;
-    height: 85%;
-    border: 2px solid rgb(62, 117, 59);
-    box-sizing: inherit;
-    padding: .5em 1em;
-    color: white;
-    background-color: rgb(62, 117, 59, 0.5);
-    font-size: 18px;
-    text-align: left;
-    margin: 3em;
-    
-}
-
-
-.table_please{
-    width: 75%;
-    height: 25%;
-    text-align: center;
-    display: flex;
-    flex-direction: row-reverse;
-}
-
-.table{
-    border: 3px solid rgb(62, 117, 59); 
-    width: 70%;
-    background-color: rgb(62, 117, 59, 0.5);
-    
-}
-
-.table
-th {
-    font-size: 18px;
-    font-weight: normal;
-    background: rgb(62, 117, 59);
-    border-top: 4px solid rgb(62, 117, 59);
-    border-bottom: 1px solid white;
-    color: white;
-    padding: 8px;
-}
-
-.table
-td {
-    background: rgb(62, 117, 59, 0.5);
-    border-bottom: 1px solid white;
-    color: white;
-    border-top: 1px solid transparent;
-    padding: 8px;
-}
-
-.table
-tr:hover td {
-    background: #6aa8cf;
-}
-
-.table
-caption{
-    font-size: 20px;
-    margin: 1em;  
 }
