--- a/children.css
+++ b/children.css
@@ -1,7 +1,7 @@
 .corona_block{
-    width: 87%;
+    width: 80%;
     height: 100%;
-    overflow-x: scroll;
+    overflow-y: scroll;
     
 }
 
@@ -23,7 +23,7 @@
 }
 
 .corona_block_picture_childrens{
-    width: 45%;
+    width: 70%;
     height: 100%;
     display: flex; 
     object-fit: contain;
@@ -31,9 +31,9 @@
 }
 
 .childrens_photo{
-    width: 100%;
+    width: 64%;
     height: 100%;
-    margin: 0em 5em;
+    margin-left: 5em;    
 }
 
 .corona_block_article_share{
@@ -41,9 +41,10 @@
     height: 50%;    
     box-shadow: 4px 5px 5px rgb(254, 255, 254) inset;
     padding: .5em 1em;
+    margin-right: 2em;    
     background-color: rgb(106, 168, 207);
     color: white;    
-    margin: 0em 0em 0em 18em;
+    
     border-radius: .3em;
     text-align: left;
     font-size: 20px;
