--- a/news.css
+++ b/news.css
@@ -1,15 +1,13 @@
 .news{
     width: 75%;
-    height: 85%;
-    border: 2px solid rgb(62, 117, 59);
+    height: 85%;    
     box-sizing: inherit;
     padding: .5em 1em;
-    color: white;
-    background-color: rgb(62, 117, 59, 0.5);
+    color: rgb(62, 117, 59); 
+    background-color: rgb(254, 255, 254, 0.3); 
     font-size: 18px;
     text-align: left;
-    margin: 3em;
-    
+    margin: 3em;    
 }
 
 
@@ -21,31 +19,30 @@
     flex-direction: row-reverse;
 }
 
-.table{
-    border: 3px solid rgb(62, 117, 59); 
-    width: 70%;
-    background-color: rgb(62, 117, 59, 0.5);
-    
+.table{    
+    width: 70%;  
+    box-shadow: 4px 5px 5px rgb(254, 255, 254) inset;
+    background-color: rgb(254, 255, 254, 0.3);    
 }
 
 .table
 th {
     font-size: 18px;
     font-weight: normal;
-    background: rgb(62, 117, 59);
-    border-top: 4px solid rgb(62, 117, 59);
-    border-bottom: 1px solid white;
-    color: white;
+    box-shadow: 4px 5px 5px rgb(254, 255, 254) inset;      
+    color:rgb(62, 117, 59); 
     padding: 8px;
+    border-bottom: 1px solid rgb(62, 117, 59);
 }
 
 .table
 td {
-    background: rgb(62, 117, 59, 0.5);
+    
     border-bottom: 1px solid white;
-    color: white;
+    color:rgb(62, 117, 59); 
     border-top: 1px solid transparent;
     padding: 8px;
+    
 }
 
 .table
