--- a/registration.css
+++ b/registration.css
@@ -9,12 +9,13 @@
 .registration{
     width: 40%;
     height: 95%;
-    border: 1px solid rgb(62, 117, 59);
+    box-shadow: 4px 5px 5px rgb(254, 255, 254) inset;
+    background-color: rgb(254, 255, 254, 0.3);    
     box-sizing: inherit;
     padding: .5em 1em;
-    color: white;
-    background-color: rgb(62, 117, 59, 0.5);
+    color: rgb(62, 117, 59);    
     font-size: 18px;
+    font-weight: 800;
     text-align: center;
     border-radius: .3em;
 }
@@ -23,7 +24,7 @@
 .name_surname{
     width: 90%;
     height: 25%;
-    margin: 2em;
+    margin: 1.5em;
     display: flex;
     justify-content: center
 }
@@ -41,7 +42,7 @@
 .date_phone{
     width: 90%;
     height: 25%;
-    margin: 2em;
+    margin: 1.5em;
     display: flex;
     justify-content: center
 }
@@ -49,6 +50,12 @@
 .date{
     width: 50%;
     height: 100%;
+}
+
+.date
+input{
+    padding: .5em;
+    color: rgb(62, 117, 59);
 }
 
 .phone{
@@ -59,7 +66,7 @@
 .email_password{
     width: 90%;
     height: 25%;
-    margin: 2em;
+    margin: 1.5em;
     display: flex;
     justify-content: center
 }
@@ -77,7 +84,7 @@
 .from_where{
     width: 100%;
     height: 25%;
-    margin: 2em;
+    margin: 1em;
     font-size: 16px;
 }
 
@@ -85,38 +92,45 @@
     font-size: 18px;
 }
 
-.from_where_radio
-input{
-    width: 18px;
-    height: 18px;
-
-}
+.from_where_radio input{
+    display: none;
+}  
 
 
 .from_where_radio
 label{
     font-size: 14px;
-    
+    display: inline-block;	
+	padding: 0px 15px;
+	line-height: 34px;
+	border: 1px solid white;
+	border-radius: 6px;
+    box-shadow: 4px 5px 5px rgb(254, 255, 254, 0.7) inset;	   
+}
+
+.from_where_radio input:checked + label {
+	background: rgb(106, 168, 207);
 }
 
 .feedback{
     width: 100%;
     height: 25%;
-    margin: 2em;
+    margin: 0.5em;
 }
 
 .feedback
 textarea{
     border-radius: .3em;
-    border: .3em solid rgb(62, 117, 59);
-    background-color: rgb(62, 117, 59, 0.5);
+    border: .3em solid white;
+    background-color: rgba(254, 255, 254, 0.5);
+    box-shadow: 4px 5px 5px rgb(254, 255, 254, 0.7);
 }
 
 input{
     border-radius: .3em;
-    border: .3em solid rgb(62, 117, 59);
-    background-color: rgb(62, 117, 59, 0.5);
-    
+    border: .1em solid white;
+    background-color: rgba(254, 255, 254, 0.5);
+    box-shadow: 4px 5px 5px rgb(254, 255, 254, 0.7);
 }
 
 .button{
@@ -125,13 +139,15 @@ input{
     margin: 2em;
 }
 
+.button
 button{
     text-align: center;
     border: none;
     border-radius: 7px;
     padding: 10px 30px;
-    background: rgb(62, 117, 59);
+    background: rgb(106, 168, 207);
     cursor: pointer;
     font-weight: bold;
-    color: white;
+    color: rgb(62, 117, 59);    
+    box-shadow: 4px 5px 5px rgb(254, 255, 254, 0.7) inset;
 }
