--- a/styles.css
+++ b/styles.css
@@ -23,20 +23,27 @@ html, body{
 }
 
 .header_heading{
+    width: 100%;
+    height: 100%;
     font-size: 18px;
     color: white;
 }
 
 .sprout_photo {
-    width: 15%;
-    height: 15%;
-    padding: 1em 2em;
-    
+    width: 8em;
+    height: 4.6em;
+    padding: 1em 2em;   
 }
 
 .sprout_photo:hover {
     background: #E9E4E0;
     border-radius: 2em;
+}
+
+.registration_photo{
+    width: 3em;
+    height: 3em;
+    margin-left: 4.5em;
 }
 
 .header_heading a{
@@ -69,6 +76,23 @@ html, body{
 .header_menu_li a{
     color: white;
     text-decoration: none;
+}
+
+.header_menu_li_log_in{
+    display: flex;    
+    align-items: flex-end
+}
+
+.header_menu_li_log_in button{
+    text-align: center;
+    border: none;
+    border-radius: 7px;
+    padding: 5px 15px;
+    background: rgb(62, 117, 59);
+    cursor: pointer;
+    font-weight: bold;
+    color: white;    
+    box-shadow: 4px 5px 5px 2px rgb(254, 255, 254, 0.4) inset;
 }
 
 .main{
@@ -104,36 +128,37 @@ html, body{
 }
 
 .list_main_menu{
-    width: 13%;
-    height: 100%;
-    
+    width: 20%;
+    height: 100%;    
 }
 
 .header_menu_li a:hover{
     background: #1c87c9;
     border-radius: .3em;
+    display: inline-block;
+    line-height: 34px;
 }
 
 
 .list_menu{
+    width: 60%;
+    height: 100%;
     counter-reset: li; 
     list-style: none;     
     padding: 0;
-    margin: 2em;
-    font-size: 16px;
+    margin-left: 3em;
+    font-size: 16px;    
 }
 
 .list_menu a {
     position: relative;
     display: block;
     padding: .4em .4em .4em 2em;
-    margin: .5em 0;
+    margin: 1em 0;
     background: rgb(62, 117, 59, 0.3);
     color: #444;
     text-decoration: none;
-    border-radius: .3em;
-    transition: .3s ease-out;
-    margin: 1.5em;
+    border-radius: .3em;     
 }
 
 .list_menu a:hover {background: #E9E4E0;}
